# symposium

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  WORKFLOW.bugs.md  WORKFLOW.example.md  WORKFLOW.example2.md
examples/: open-pr.yml  sentry_probe.rs
src/: error.rs  lib.rs  logging.rs  main.rs
src/agent/: mod.rs  process.rs  protocol.rs  tools.rs  worker.rs
src/config/: env.rs  mod.rs  schema.rs  watch.rs  workflow.rs
src/domain/: epic.rs  issue.rs  mod.rs  retry.rs  session.rs  state.rs  workflow.rs
src/orchestrator/: dispatch.rs  mod.rs  pr_review.rs  reconcile.rs  retry.rs  tick.rs
src/prompt/: mod.rs
src/server/: api.rs  dashboard.rs  mod.rs
src/tracker/: mcp.rs  mcp_http.rs  mod.rs  notion.rs  oauth.rs  sentry.rs
src/workspace/: hooks.rs  mod.rs  safety.rs
templates/: dashboard.html
